...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:onClick="onBtnSum"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/btnChngSign"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:onClick="onBtnChangeSign"
        android:text="@string/chngSign"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <Button
        android:id="@+id/btnOneOver"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:onClick="onOverXClick"
        android:text="@string/oneOverX"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="141dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="onBtn0Click"
        android:text="@string/num0"
...
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="55dp"
        android:layout_height="106dp"
        android:layout_marginTop="4dp"
        android:onClick="onEqualClick"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="onBtn8Click"
        android:text="@string/num8"
...
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:onClick="onClearClick"
        android:text="@string/C"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:onClick="onBtn6Click"
        android:text="@string/num6"
...
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplay"
        app:layout_constraintVertical_bias="0.524" />

    <ImageButton
        android:id="@+id/btnBkspc"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/C"
        android:onClick="onBtnBkspcClick"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <ImageButton
        android:id="@+id/btnSqrt"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:contentDescription="@string/sqrt"
        android:onClick="onSqrtClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        app:srcCompat="@drawable/sqrt" />

    <ImageButton
        android:id="@+id/btnSq"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:contentDescription="@string/sq"
        android:onClick="onSqClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
