<resources>
    <string name="app_name">Lab3</string>
    <string name="displayDft">0</string>
    <string name="empty">No data entered</string>
    <string name="positive">Cant be negative numbers</string>
    <string name="zero">Can not do division by zero</string>
    <string name="MC">MC</string>
    <string name="MR">MR</string>
    <string name="MS">MS</string>
    <string name="MPlus">M+</string>
    <string name="MMinus">M-</string>
    <string name="backSpace">bks</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="chngSign">±</string>
    <string name="sqrt">Square root</string>
    <string name="sq">Square</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="div">/</string>
    <string name="percent">%</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="multiply">*</string>
    <string name="oneOverX">1/x</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="minus">-</string>
    <string name="num0">0</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="pointError">cant add a point</string>
    <string name="cantUseEqual">Inproper use of equal operation</string>
</resources>